# smolagents-with-mcp

./: .env.sample  README.md  main.py  pyproject.toml
src/app/: container.py  main.py  server.py
src/app/chat/: router.py
src/app/chat/application/service/: chatbot_service.py
src/app/chat/domain/: request.py  response.py
src/app/config/: env_config.py  local.yaml
src/app/utils/: init_config.py
src/mcp-server/naver-local-search/: server.py
